--- a/wp-content/themes/portfoliounder/sass/site/_site.scss
+++ b/wp-content/themes/portfoliounder/sass/site/_site.scss
@@ -1,5 +1,17 @@
 // @import "../layout/content-sidebar";
 // @import "../layout/sidebar-content";
+
+/*--------------------------------------------------------------
+## Global Layout
+--------------------------------------------------------------*/
+@import "../layout/global";
+
+/*--------------------------------------------------------------
+## header Layout
+--------------------------------------------------------------*/
+@import "header/header";
+
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
