--- a/wp-content/themes/portfoliounder/sass/elements/_elements.scss
+++ b/wp-content/themes/portfoliounder/sass/elements/_elements.scss
@@ -33,10 +33,74 @@ hr {
 img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
+	display: block;
+	width: auto;
 }
 
 figure {
-	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
+	margin: 0; /* Extra wide images within figure tags don't overflow the content area. */
+}
+
+.site-info {
+display : none;
+}
+
+.site-main{
+  padding-left: 1em;
+  padding-right: 1em;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px){
+  .home .site-content{
+    align-content: center;
+    text-align: center;
+  }
+  p{
+    /*position: absolute;*/
+    margin-left: 50%;
+    transform: translate(-50%);
+  }
+}
+
+@media screen and (min-width: 600px){
+.home .site-content{
+  -moz-column-count: 3;
+    -moz-column-gap: 10px;
+    -moz-column-rule: none;
+    -webkit-column-count: 3;
+    -webkit-column-gap: 10px;
+    -webkit-column-rule: none;
+  margin-right: 3em;
+  margin-left: 3em;
+  column-count: 3;
+  column-gap: 10px;
+  column-rule: none;
+}
+/*p{
+  position: absolute;
+  top: 100px;
+}*/
+}
+
+.home .entry-title, .entry-meta, .entry-footer {
+  display: none;
+}
+
+.comments-area{
+	display: none;
+}
+
+// .more-link{
+//  display:none;
+// }
+
+nav{
+	display:none;
+}
+
+.comment-navigation{
+	display: none;
 }
 
 @import "tables";
